--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,21 @@
-<p>
-  navbar works!
-</p>
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+  <div class="container">
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#" routerLink="/memorials/civilwar">Civil War</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" routerLink="/memorials/worldwar1">World War 1</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" routerLink="/memorials/worldwar2">World War 2</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" routerLink="/memorials/koreanwar">Korean War</a>
+          </li>  
+        </ul>   
+      </div>
+      </div>
+    </nav>
+    <br><br>
